Added poster to front page.

--- a/door.abluestar.com/index.html
+++ b/door.abluestar.com/index.html
@@ -21,11 +21,10 @@
     </nav>
 
 	<div class="container">
-		<p>this is some information</p>
+    <p>Registration will be available soon</p><br /><br />
+		<img src='img/poster.png' />
 	</div>
-
-	<footer>
-		<a href='#'>abluestar.com</a>
-	</footer>	
+  
+	<footer></footer>	
 </body>
 </html>
