Updating website with Registration information

--- a/door.abluestar.com/index.html
+++ b/door.abluestar.com/index.html
@@ -12,16 +12,11 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
     <!-- Top nav -->
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <h1>Magic Doors</h1>
-        </div>
-      </div>
-    </nav>
 
 	<div class="container">
-    <p>Registration will be available soon</p><br /><br />
+    
+    <h1><a href='https://www.eventbrite.com/e/magic-door-workshop-on-sunday-july-19th-2015-tickets-17290141278'>Register here</a></h1>
+    <br /><br />
 		<img src='img/poster.png' />
 	</div>
   
